Register User account API
Fix connect Firebase, add validate user code

--- a/env.example
+++ b/env.example
@@ -1,5 +1,12 @@
 DATABASE_NAME=device_manager
-DATABASE_USER=device_manager
-DATABASE_PASSWORD=device_manager
+DATABASE_USER=postgres
+DATABASE_PASSWORD=12345678
 DATABASE_HOST=localhost
 DATABASE_PORT=''
+FIREBASE_API_KEY=''
+FIREBASE_DB_URL=''
+FIREBASE_AUTH_DOMAIN=''
+FIREBASE_PROJECT_ID=''
+FIREBASE_STORAGE_BUCKET=''
+FIREBASE_MESSAGING_SENDER_ID=''
+FIREBASE_APP_IP=''
